unpackaged/main/default/objects/Bid_Team_Member__c/Bid_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Bid Team Member</label>
    <nameField>
        <displayFormat>BTM-{0000000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>