unpackaged/main/default/objects/Bid_Team_Member__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <label>Bid</label>
    <referenceTo>BID__c</referenceTo>
    <relationshipLabel>Bid Team Members</relationshipLabel>
    <relationshipName>Bid_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>