unpackaged/main/default/objects/Bid_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Roles - Bid Team</description>
    <inlineHelpText>Typical TechnologyOne roles that are allocated to form a Bid Team.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regional Manager</fullName>
                <color>#003300</color>
                <label>Regional Manager</label>
            </value>
            <value>
                <fullName>Customer Development Manager</fullName>
                <color>#006600</color>
                <label>Customer Development Manager</label>
            </value>
            <value>
                <fullName>Customer Account Manager</fullName>
                <color>#009900</color>
                <label>Customer Account Manager</label>
            </value>
            <value>
                <fullName>Solutions Manager</fullName>
                <color>#6600CC</color>
                <label>Solutions Manager</label>
            </value>
            <value>
                <fullName>Bid Coordinator</fullName>
                <color>#CC66CC</color>
                <label>Bid Coordinator</label>
            </value>
            <value>
                <fullName>Bid Manager</fullName>
                <color>#6633FF</color>
                <label>Bid Manager</label>
            </value>
            <value>
                <fullName>Consulting Director</fullName>
                <color>#663333</color>
                <label>Consulting Director</label>
            </value>
            <value>
                <fullName>General Manager Product</fullName>
                <color>#CC6600</color>
                <label>General Manager Product</label>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
                <color>#FF6600</color>
                <label>Business Development Manager</label>
            </value>
            <value>
                <fullName>Pre-Sales Consultant</fullName>
                <color>#FF9900</color>
                <label>Pre-Sales Consultant</label>
            </value>
            <value>
                <fullName>AMS Practice Lead</fullName>
                <color>#CC9933</color>
                <label>AMS Practice Lead</label>
            </value>
            <value>
                <fullName>General Manager Cloud</fullName>
                <color>#993300</color>
                <label>General Manager Cloud</label>
            </value>
            <value>
                <fullName>Technical Cloud Pre-Sales</fullName>
                <color>#996633</color>
                <label>Technical Cloud Pre-Sales</label>
            </value>
            <value>
                <fullName>Technical Pre-Sales</fullName>
                <color>#2F5D85</color>
                <label>Technical Pre-Sales</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <color>#000000</color>
                <label>Legal</label>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
                <color>#333333</color>
                <label>Executive Sponsor</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#BBBBBB</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>