unpackaged/main/default/objects/Bid_Team_Member__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>